feat: Criado comunicação entre telas e a função de pesquisar dispositivos

--- a/SmartHome/StoryBoards/Base.lproj/Main.storyboard
+++ b/SmartHome/StoryBoards/Base.lproj/Main.storyboard
@@ -42,7 +42,16 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells/>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="nBH-QX-LYo">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="6BL-2y-mxo">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -57,7 +66,7 @@
                     <navigationItem key="navigationItem" title="SmartHome" largeTitleDisplayMode="always" id="qpl-iy-z6g">
                         <barButtonItem key="rightBarButtonItem" style="done" systemItem="add" id="uuj-pO-11W">
                             <connections>
-                                <segue destination="A9z-G6-mBa" kind="show" id="ZH7-WX-mTN"/>
+                                <action selector="newDevice:" destination="BYZ-38-t0r" id="hSZ-3s-G5n"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -72,13 +81,13 @@
         <!--Adicionar dispositivo-->
         <scene sceneID="P6f-VV-Ss7">
             <objects>
-                <viewController id="QAF-GU-ivA" customClass="AddDeviceViewController" customModule="SmartHome" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddDeviceViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="QAF-GU-ivA" customClass="AddDeviceViewController" customModule="SmartHome" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ynZ-1M-uHC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ya5-2y-mgd">
-                                <rect key="frame" x="16" y="513" width="382" height="50"/>
+                                <rect key="frame" x="16" y="596" width="382" height="50"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="f6i-cG-y4b"/>
@@ -116,6 +125,20 @@
                                     <segue destination="Y3w-pQ-8ez" kind="presentation" modalPresentationStyle="pageSheet" modalTransitionStyle="coverVertical" id="lkf-r8-yCF"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Porta" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zmh-NC-xK9">
+                                <rect key="frame" x="16" y="493" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="F5j-Yu-BkP">
+                                <rect key="frame" x="16" y="522" width="60" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="9XU-8n-q7X"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -124,13 +147,17 @@
                             <constraint firstItem="AJt-zU-Pad" firstAttribute="top" secondItem="S4e-V9-9Cz" secondAttribute="top" constant="16" id="EZJ-79-591"/>
                             <constraint firstItem="S4e-V9-9Cz" firstAttribute="trailing" secondItem="AJt-zU-Pad" secondAttribute="trailing" constant="16" id="I7R-eV-lDk"/>
                             <constraint firstItem="ym4-vo-ixo" firstAttribute="trailing" secondItem="AJt-zU-Pad" secondAttribute="trailing" constant="-10" id="Pbl-5i-zPC"/>
+                            <constraint firstItem="Ya5-2y-mgd" firstAttribute="top" secondItem="F5j-Yu-BkP" secondAttribute="bottom" constant="40" id="Rv1-V3-JE1"/>
                             <constraint firstItem="S4e-V9-9Cz" firstAttribute="trailing" secondItem="Ya5-2y-mgd" secondAttribute="trailing" constant="16" id="WYN-7G-iN2"/>
                             <constraint firstItem="Ya5-2y-mgd" firstAttribute="leading" secondItem="S4e-V9-9Cz" secondAttribute="leading" constant="16" id="X1l-7l-5Os"/>
+                            <constraint firstItem="Zmh-NC-xK9" firstAttribute="top" secondItem="iDc-PM-MJX" secondAttribute="bottom" constant="10" id="aUD-xx-9t1"/>
                             <constraint firstItem="AJt-zU-Pad" firstAttribute="leading" secondItem="S4e-V9-9Cz" secondAttribute="leading" constant="16" id="cT7-gr-PgZ"/>
                             <constraint firstItem="S4e-V9-9Cz" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="GKM-oG-Aeu" secondAttribute="trailing" symbolic="YES" id="cWF-F1-1bb"/>
-                            <constraint firstItem="Ya5-2y-mgd" firstAttribute="top" secondItem="iDc-PM-MJX" secondAttribute="bottom" constant="30" id="dbG-Ws-Sab"/>
                             <constraint firstItem="GKM-oG-Aeu" firstAttribute="leading" secondItem="S4e-V9-9Cz" secondAttribute="leading" constant="16" id="dzi-8B-ZkG"/>
                             <constraint firstItem="ym4-vo-ixo" firstAttribute="top" secondItem="AJt-zU-Pad" secondAttribute="top" constant="10" id="eNO-iG-0Zv"/>
+                            <constraint firstItem="Zmh-NC-xK9" firstAttribute="leading" secondItem="S4e-V9-9Cz" secondAttribute="leading" constant="16" id="fFN-iR-RaD"/>
+                            <constraint firstItem="F5j-Yu-BkP" firstAttribute="leading" secondItem="S4e-V9-9Cz" secondAttribute="leading" constant="16" id="n4e-ZK-l05"/>
+                            <constraint firstItem="F5j-Yu-BkP" firstAttribute="top" secondItem="Zmh-NC-xK9" secondAttribute="bottom" constant="8" id="rbU-4h-6Oe"/>
                             <constraint firstItem="S4e-V9-9Cz" firstAttribute="trailing" secondItem="iDc-PM-MJX" secondAttribute="trailing" constant="16" id="rbp-ee-CDK"/>
                             <constraint firstItem="iDc-PM-MJX" firstAttribute="leading" secondItem="S4e-V9-9Cz" secondAttribute="leading" constant="16" id="smE-SY-RfU"/>
                         </constraints>
@@ -151,7 +178,7 @@
         <!--Selected Image View Controller-->
         <scene sceneID="4Ss-Sl-hnG">
             <objects>
-                <viewController id="Y3w-pQ-8ez" customClass="SelectedImageViewController" customModule="SmartHome" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SelectedImageViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y3w-pQ-8ez" customClass="SelectedImageViewController" customModule="SmartHome" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Lii-gR-akm">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -175,7 +202,7 @@
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageDevice" id="mxx-AS-SN4">
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageDevice" id="mxx-AS-SN4" customClass="ImageCollectionViewCell" customModule="SmartHome" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="zv4-QW-xBN">
@@ -185,14 +212,27 @@
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yf4-QG-Kjw">
                                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                         </imageView>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IK5-Lc-H3O">
+                                                            <rect key="frame" x="90" y="8" width="30" height="30"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="30" id="5um-Ec-Y2v"/>
+                                                                <constraint firstAttribute="width" constant="30" id="Tdd-NZ-wb8"/>
+                                                            </constraints>
+                                                        </imageView>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="Yf4-QG-Kjw" secondAttribute="trailing" id="AhS-qr-Tbm"/>
+                                                        <constraint firstItem="IK5-Lc-H3O" firstAttribute="top" secondItem="zv4-QW-xBN" secondAttribute="top" constant="8" id="E6T-D1-7Nn"/>
                                                         <constraint firstItem="Yf4-QG-Kjw" firstAttribute="leading" secondItem="zv4-QW-xBN" secondAttribute="leading" id="LFi-sn-Ug8"/>
+                                                        <constraint firstAttribute="trailing" secondItem="IK5-Lc-H3O" secondAttribute="trailing" constant="8" id="g35-Or-Pdi"/>
                                                         <constraint firstItem="Yf4-QG-Kjw" firstAttribute="top" secondItem="zv4-QW-xBN" secondAttribute="top" id="rTF-YA-CQG"/>
                                                         <constraint firstAttribute="bottom" secondItem="Yf4-QG-Kjw" secondAttribute="bottom" id="un4-wI-95b"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
+                                                <connections>
+                                                    <outlet property="imageDevice" destination="Yf4-QG-Kjw" id="Lxb-iv-FVx"/>
+                                                    <outlet property="selectedImage" destination="IK5-Lc-H3O" id="m40-2S-f9K"/>
+                                                </connections>
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
@@ -256,13 +296,13 @@
         <!--Procurar Dispositos-->
         <scene sceneID="R51-nX-bXX">
             <objects>
-                <viewController id="A9z-G6-mBa" customClass="SearchViewController" customModule="SmartHome" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SecondViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="A9z-G6-mBa" customClass="SearchViewController" customModule="SmartHome" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9aW-ei-N6D">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cnk-eX-95G">
-                                <rect key="frame" x="16" y="518" width="382" height="50"/>
+                                <rect key="frame" x="16" y="474" width="382" height="50"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="UuH-HY-p7W"/>
@@ -273,11 +313,10 @@
                                 </state>
                                 <connections>
                                     <action selector="searchDevices:" destination="A9z-G6-mBa" eventType="touchUpInside" id="k22-LK-PzK"/>
-                                    <segue destination="QAF-GU-ivA" kind="show" id="fQb-9U-eDP"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="h3B-8a-Dlj">
-                                <rect key="frame" x="0.0" y="88" width="414" height="400"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="400"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="400" id="P6d-PE-HtI"/>
